2003-01-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/mule-tests.el: Test cases for charset-in-* functions.

2003-01-06  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (stale match data): Stale match data
	persists after failed match.  Thanks to <bjacob@ca.metsci.com>.

2003-01-04  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.10 "burdock" is released.

2002-12-27  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el (Mule character class): New test
	cases.  Based on draft patch by Daiki Ueno <daiki@xemacs.org>.

	* automated/test-harness.el (Print-Pass): Comment.

2002-10-19  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-expect-bug): New variable.
	(Known-Bug-Expect-Failure): New macro.
	(Skip-Test-Unless): New macro.
	(Check-Message): Use Skip-Test-Unless.
	(test-harness-from-buffer): Type fixes.

	* automated/regexp-tests.el: Use Known-Bug-Expect-Failure.

	* automated/syntax-tests.el: Use Skip-Test-Unless.

2002-09-09  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add test for stale subexpr match-data.
	Thanks to Martin Stjernholm for the report.

	* automated/syntax-tests.el: Conditionalize syntax-table property
	tests on feature.  Enable feature if present.

2002-09-12  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add word-boundary regexp tests.

2002-08-30  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.9 "brussels sprouts" is released.

2002-08-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/test-harness.el (test-harness-from-buffer):
	Print-Skip: new local function.

	* automated/syntax-tests.el (forward-comment at buffer boundaries):
	* automated/test-harness.el (Check-Message):
	Warn, not barf, if required packages are unavailable.

2002-07-27  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.8 "broccoli" is released.

2002-07-20  Mike Sperber <mike@xemacs.org>
